Swagger 추가 커넥션스트링 오타 수정 쉘 스크립트로 서버 부팅 임시 struct 제거 GetById 의 반복문 제거
