# internal/controller/article_controller.go
@@ -12,14 +12,6 @@ import (
 	"github.com/gorilla/mux"
 )
 
-type ArticleSwag struct {
-	Title     string `json:"title"`
-	Body      string `json:"body"`
-	UserName  string `json:"userName"`
-	CreatedAt string `json:"createdAt"`
-	UpdatedAt string `json:"updatedAt"`
-}
-
 type ArticleController struct {
 	useCase ArticleUseCase
 }
@@ -32,6 +24,7 @@ func NewArticleController(router *mux.Router, us ArticleUseCase) {
 	router.HandleFunc("/api/article", controller.CreateArticle).Methods("POST")
 	router.HandleFunc("/api/article/{title}", controller.GetArticle).Methods("GET")
 	router.HandleFunc("/api/articles", controller.GetArticles).Methods("GET")
+	router.HandleFunc("/api/article/{title}", controller.UpdateArticle).Methods("PUT")
 	router.HandleFunc("/api/article/{title}", controller.DeleteArticle).Methods("DELETE")
 }
 
@@ -41,8 +34,8 @@ func NewArticleController(router *mux.Router, us ArticleUseCase) {
 // @ID			 create-article
 // @Accept		 json
 // @Produce      json
-// @Param		 article body ArticleSwag true "새로운 Article 정보"
-// @Success      201 {object} ArticleSwag
+// @Param		 article body domain.Article true "새로운 Article 정보"
+// @Success      201 {object} domain.Article
 // @Router       /api/article [post]
 func (c *ArticleController) CreateArticle(w http.ResponseWriter, r *http.Request) {
 	var article Article
@@ -51,13 +44,13 @@ func (c *ArticleController) CreateArticle(w http.ResponseWriter, r *http.Request
 		http.Error(w, "Error decoding JSON", http.StatusBadRequest)
 		return
 	}
-	done, err := c.useCase.Create(&article)
+	newArticle, err := c.useCase.Create(&article)
 	if err != nil {
 		http.Error(w, "Failed to create Article", http.StatusInternalServerError)
 		return
 	}
 
-	response, _ := json.Marshal(done)
+	response, _ := json.Marshal(newArticle)
 
 	w.Header().Set("Content-Type", "application/json")
 	fmt.Fprintln(w, string(response))
@@ -69,7 +62,7 @@ func (c *ArticleController) CreateArticle(w http.ResponseWriter, r *http.Request
 // @ID			 get-article
 // @Produce      json
 // @Param        title path string true "조회할 Article 제목"
-// @Success      200 {object} ArticleSwag
+// @Success      200 {object} domain.Article
 // @Router       /api/article/{title} [get]
 func (c *ArticleController) GetArticle(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
@@ -86,11 +79,49 @@ func (c *ArticleController) GetArticle(w http.ResponseWriter, r *http.Request) {
 // @Tags         Article
 // @ID			 get-articles
 // @Produce      json
-// @Success      200 {array} ArticleSwag
+// @Success      200 {array} domain.Article
 // @Router       /api/articles [get]
 func (c *ArticleController) GetArticles(w http.ResponseWriter, r *http.Request) {
 	articles, _ := c.useCase.GetAll()
 	response, _ := json.Marshal(articles)
+
+	w.Header().Set("Content-Type", "application/json")
+	fmt.Fprintln(w, string(response))
+}
+
+// @Summary      Article 수정
+// @Description  Article 을 수정합니다.
+// @Tags         Article
+// @ID			 update-article
+// @Accept		 json
+// @Produce      json
+// @Param		 title path string true "수정할 Article 제목"
+// @Param		 article body domain.Article true "수정할 Article 정보"
+// @Success      200 {object} string
+// @Router       /api/article/{title} [put]
+func (c *ArticleController) UpdateArticle(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	title := vars["title"]
+	_, err := c.useCase.GetById(title)
+	if err != nil {
+		http.Error(w, "Article does not exist", http.StatusBadRequest)
+		return
+	}
+
+	var article Article
+	err = json.NewDecoder(r.Body).Decode(&article)
+	if err != nil {
+		http.Error(w, "Error decoding JSON", http.StatusBadRequest)
+		return
+	}
+
+	updatedArticle, err := c.useCase.Update(title, &article)
+	if err != nil {
+		http.Error(w, "Failed to update Article", http.StatusInternalServerError)
+		return
+	}
+
+	response, _ := json.Marshal(updatedArticle)
 
 	w.Header().Set("Content-Type", "application/json")
 	fmt.Fprintln(w, string(response))
@@ -104,7 +135,7 @@ func (c *ArticleController) GetArticles(w http.ResponseWriter, r *http.Request) 
 // @Produce      json
 // @Param		 title path string true "삭제할 Article 제목"
 // @Success      200 {object} string
-// @Router       /api/article [delete]
+// @Router       /api/article/{title} [delete]
 func (c *ArticleController) DeleteArticle(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	title := vars["title"]
